Добавил задачу Опхряб 2 и исправил опечатки и косяки с форматированием

--- a/problems-2/problems-2.tex
+++ b/problems-2/problems-2.tex
@@ -5,7 +5,7 @@
 \usepackage{hyperref}
 \usepackage{xifthen}
 \hypersetup{
-	colorlinks=true, linkcolor = {black}, urlcolor = {blue}
+	colorlinks=true, linkcolor = {black}, urlcolor = {blue}, breaklinks=true
 }
 \setlength{\parskip}{.5em}
 \setmainlanguage{russian} 
@@ -41,21 +41,39 @@
 \problem{} Напишите скрипт, который требует ввода числа из stdin (стандартного потока ввода). Если введенная строка не является числом, скрипт должен требовать
 повторить ввод.  Скрипт завершается, когда введено число, или когда введен конец файла (CTRL-Z в Windows, CTRL-D в начале строки в Unix).
 
-\problem{vector} Реализуйте класс Vector, соответствующий N-мерному вектору линейной алгебры.  У этого класса должны быть определены все естественные для вектора операции -- сложение, вычитание, умножение на константу, скалярное произведение и сравнение на равенство, -- а также операции вычисления длины, получение элемента по индексу и строковое представление. Во всех операциях можно считать, что все передаваемые аргументы корректны.
+\problem{vector} Реализуйте класс Vector, соответствующий N-мерному вектору линейной алгебры.  У этого класса должны быть определены все естественные для вектора операции \textemdash{} сложение, вычитание, умножение на константу, скалярное произведение и сравнение на равенство, \textemdash{} а также операции вычисления длины, получение элемента по индексу и строковое представление. Во всех операциях можно считать, что все передаваемые аргументы корректны.
+\pagebreak
 
 \problem{} Создайте документацию для класса Vector и его методов из задания \ref{vector}. В Python нет закрепленного общего стиля для документации, но можно выбрать 
-какой-нибудь популярный и использовать его. Например, можно взять стиль для SciPy \url{https://github.com/numpy/numpy/blob/master/doc/HOWTO_DOCUMENT.rst.txt}
-(для начала его можно не читать полностью, а только посмотреть примеры для классов и функций).
+какой-нибудь популярный и использовать его. Например, можно взять стиль для SciPy 
+\href{https://github.com/numpy/numpy/blob/master/doc/HOWTO_DOCUMENT.rst.txt}{\nolinkurl{https://github.com/numpy/numpy/}\\ 
+\nolinkurl{blob/master/doc/HOWTO_DOCUMENT.rst.txt}}
+\\(для начала его можно не читать полностью, а только посмотреть примеры для классов и функций).
 
-\problem{} {\bf Опхряб1:} Напишите программу, которая определяет кодировку текста.  На вход программы подается файл в неизвестной кодировке. Постройте диаграммы частот встречаемости всех не-ASCII символов (байтов, значение которого превосходит 127) в файле.  Программа должна вывести частоты встречаемости каждого байта, в порядке убывания встречаемости (самый часто встречающийся байт идет первым).  Встречаемость определяется по формуле $p[b]*100/N$, где $p[b]$ - количество раз, которые байт встретился в тексте, а $N$ - количество байт с кодами > 127 в тексте.
+\problem{ophryab} {\bf Опхряб1:} Напишите программу, которая определяет частоту встречаемости однобайтовых символов в тексте.  
+Программе через аргумент командной строки подается имя файла.  Файл содержит текст в неизвестной кодировке. 
+Постройте диаграммы частот встречаемости всех не-ASCII символов (байтов, значение которых превосходит 127) в файле.  
+Программа должна вывести частоты встречаемости каждого байта, в порядке убывания встречаемости (самый часто встречающийся байт идет первым).  
+Встречаемость определяется по формуле $p[b]*100/N$, где $p[b]$ \textendash{} количество раз, которые байт встретился в тексте, 
+а $N$ \textendash{} количество байт с кодами >127 в тексте.  Для чтения байтов из файла его нужно открывать с параметрами \\ \verb|open(filename, 'rb')|
 \\
-{\it Замечание:} Ээлемент байтового массива имеет тип int.
-\\{\it Замечание 2:} Для проверки правдоподобия значений, вы можете попытаться сконвертировать байиы в символ русского языка, используя код:
+{\it Замечание:} Элемент байтового массива имеет тип int.
+\\{\it Замечание 2:} Для проверки правдоподобия значений, вы можете попытаться сконвертировать байты в символ русского языка, используя код:
 \\ \verb|char=bytes([b]).decode('koi8_r')|
-\\ где \verb|b| -- значение байта.
+\\ где \verb|b| \textendash{} значение байта, а \verb|'koi8_r'| \textendash{} название кодировки.
 \\ Разумеется, это возможно только если вы знаете кодировку файла.
 \\ Таблица встречаемости символов русского языка доступна по адресу 
-\\ \url{https://www.dpva.ru/Guide/GuideUnitsAlphabets/Alphabets/FrequencyRuLetters/}
-\\{\it Замечание 3:} Для генерации тестовых данных, в Linux можно использовать утилиту iconv, а в Windows -- сохранение из редактора Far Manager с переключением кодировки.
+\\ \href{https://www.dpva.ru/Guide/GuideUnitsAlphabets/Alphabets/FrequencyRuLetters/}{\nolinkurl{https://www.dpva.ru/Guide/GuideUnitsAlphabets/}\\ 
+\nolinkurl{Alphabets/FrequencyRuLetters/}}
+\\{\it Замечание 3:} Неточное совпадение значений и даже нарушения порядка символов по встречаемости {\it не} свидетельствуют об ошибке в вашей программе, 
+а только о том, что вам попался неудачный текст. Также, обратите внимание, что подсчет частоты байтов считает встречаемости для строчных и заглввных символов раздельно, а корректно перевести строчные символы в заглавные невозможно без знания кодировки.  В рамках подсчета частот байтов эта проблема неразрешима.
+\\{\it Замечание 4:} Для генерации тестовых данных, в Linux можно использовать утилиту iconv, а в Windows \textemdash{} сохранение из редактора Far Manager с переключением кодировки.
+\pagebreak
+
+\problem{} {\bf Опхряб2:} На основе решения задачи \ref{ophryab} и частот встречаемости символов русского языка 
+\\ \href{https://www.dpva.ru/Guide/GuideUnitsAlphabets/Alphabets/FrequencyRuLetters/}{\nolinkurl{https://www.dpva.ru/Guide/GuideUnitsAlphabets/}\\ 
+\nolinkurl{Alphabets/FrequencyRuLetters/}}
+\\ напишите программу, которая подбирает наилучшую возможную кодировку для просмотра содержимого файла, среди всех однобайтовых кодировок русского языка, поддерживаемых Python3.  
+Обратите внимание, что частоты символов в реальных текстах небольшой длины не совпадают с частотами в таблице, поэтому нужно реализовать нечеткое сравнение.
 
 \end{document}
