Еще пару мелких косяков исправил

--- a/problems-2/problems-2.tex
+++ b/problems-2/problems-2.tex
@@ -50,15 +50,15 @@
 \nolinkurl{blob/master/doc/HOWTO_DOCUMENT.rst.txt}}
 \\(для начала его можно не читать полностью, а только посмотреть примеры для классов и функций).
 
-\problem{ophryab} {\bf Опхряб1:} Напишите программу, которая определяет частоту встречаемости однобайтовых символов в тексте.  
+\problem{ophryab} {\bf Опхряб1:} Напишите программу, которая определяет частоту встречаемости байтов в тексте.  
 Программе через аргумент командной строки подается имя файла.  Файл содержит текст в неизвестной кодировке. 
 Постройте диаграммы частот встречаемости всех не-ASCII символов (байтов, значение которых превосходит 127) в файле.  
 Программа должна вывести частоты встречаемости каждого байта, в порядке убывания встречаемости (самый часто встречающийся байт идет первым).  
 Встречаемость определяется по формуле $p[b]*100/N$, где $p[b]$ \textendash{} количество раз, которые байт встретился в тексте, 
-а $N$ \textendash{} количество байт с кодами >127 в тексте.  Для чтения байтов из файла его нужно открывать с параметрами \\ \verb|open(filename, 'rb')|
+а $N$ \textendash{} количество байт с кодами >127 в тексте.  Для чтения байтов из файла его нужно открывать с параметрами \verb|open(filename, 'rb')|
 \\
 {\it Замечание:} Элемент байтового массива имеет тип int.
-\\{\it Замечание 2:} Для проверки правдоподобия значений, вы можете попытаться сконвертировать байты в символ русского языка, используя код:
+\\{\it Замечание 2:} Для проверки правдоподобия значений, вы можете попытаться сконвертировать одиночный байт в символ русского языка, используя код:
 \\ \verb|char=bytes([b]).decode('koi8_r')|
 \\ где \verb|b| \textendash{} значение байта, а \verb|'koi8_r'| \textendash{} название кодировки.
 \\ Разумеется, это возможно только если вы знаете кодировку файла.
