Добавил рекомендацию переоткрывать файл в задачу 5

--- a/problems-2/problems-2.tex
+++ b/problems-2/problems-2.tex
@@ -57,7 +57,7 @@
 Встречаемость определяется по формуле $p[b]*100/N$, где $p[b]$ \textendash{} количество раз, которые байт встретился в тексте, 
 а $N$ \textendash{} количество байт с кодами >127 в тексте.  Для чтения байтов из файла его нужно открывать с параметрами \verb|open(filename, 'rb')|
 \\
-{\it Замечание:} Элемент байтового массива имеет тип int.
+{\it Замечание 1:} Элемент байтового массива имеет тип int.
 \\{\it Замечание 2:} Для проверки правдоподобия значений, вы можете попытаться сконвертировать одиночный байт в символ русского языка, используя код:
 \\ \verb|char=bytes([b]).decode('koi8_r')|
 \\ где \verb|b| \textendash{} значение байта, а \verb|'koi8_r'| \textendash{} название кодировки.
@@ -75,5 +75,7 @@
 \nolinkurl{Alphabets/FrequencyRuLetters/}}
 \\ напишите программу, которая подбирает наилучшую возможную кодировку для просмотра содержимого файла, среди всех однобайтовых кодировок русского языка, поддерживаемых Python3.  
 Обратите внимание, что частоты символов в реальных текстах небольшой длины не совпадают с частотами в таблице, поэтому нужно реализовать нечеткое сравнение.
+
+Для вывода файла в подобранной кодировке рекомендуется его открыть заново как текстовый файл с использованием пакета codecs.
 
 \end{document}
